--- a/src/main/resources/static/auditoria.html
+++ b/src/main/resources/static/auditoria.html
@@ -142,17 +142,11 @@
                         <div class="table-responsive">
                             <table class="table table-bordered" id="usuarios" width="100%" cellspacing="0">
                                 <thead>
-                                <th>Username</th>
-                                <th>Nombres</th>
-                                <th>Apellidos</th>
-                                <th>Tipo de documento</th>
-                                <th>No de documento</th>
-                                <th>Dirección</th>
-                                <th>Telefono</th>
-                                <th>Sexo</th>
-                                <th>Rol</th>
-                                <th>Email</th>
-
+                                <th>id</th>
+                                <th>Usuario</th>
+                                <th>Actividad realizada</th>
+                                <th>fecha</th>
+                                <th>IP del usuario</th>
                                 </thead>
 
                                 <tbody>
@@ -232,7 +226,7 @@
 <script src="vendor/datatables/jquery.dataTables.min.js"></script>
 <script src="vendor/datatables/dataTables.bootstrap4.min.js"></script>
 
-
+<script src="js/auditoria.js"></script>
 
 </body>
 
