Se agrego la funcionalidad de registrara auditoria para la visualizacion de tablas, tambien se valido el username

--- a/src/main/resources/static/auditoria.html
+++ b/src/main/resources/static/auditoria.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SB Admin 2 - Tables</title>
+    <title>Simor Comunity</title>
 
     <!-- Custom fonts for this template -->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -18,8 +18,10 @@
     <!-- Custom styles for this template -->
     <link href="css/sb-admin-2.min.css" rel="stylesheet">
 
+
     <!-- Custom styles for this page -->
     <link href="vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
+
 
 
 </head>
@@ -43,7 +45,7 @@
 
         <!-- Nav Item - Tables -->
         <li class="nav-item active">
-            <a class="nav-link" href="usuarios.html">
+            <a onclick="registrarAuditoriaVisualizar('Usuarios')" class="nav-link" href="usuarios.html">
                 <i class="fas fa-fw fa-table"></i>
                 <span>Usuarios</span></a>
         </li>
@@ -136,7 +138,7 @@
                 <!-- DataTales Example -->
                 <div class="card shadow mb-4">
                     <div class="card-header py-3">
-                        <h6 class="m-0 font-weight-bold text-primary">Listado de usuarios</h6>
+                        <h6 class="m-0 font-weight-bold text-primary">Listado de trazabilidad de usuarios</h6>
                     </div>
                     <div class="card-body">
                         <div class="table-responsive">
@@ -227,6 +229,13 @@
 <script src="vendor/datatables/dataTables.bootstrap4.min.js"></script>
 
 <script src="js/auditoria.js"></script>
+<script src="js/modal-register-user.js"></script>
+
+
+
+
+
+
 
 </body>
 
