--- a/src/main/resources/static/usuarios.html
+++ b/src/main/resources/static/usuarios.html
@@ -52,7 +52,7 @@
         </li>
         <!-- Nav Item - Tables -->
         <li class="nav-item active">
-            <a class="nav-link" href="auditoria.html">
+            <a onclick="registrarAuditoriaVisualizar('Auditoria')"class="nav-link"href="auditoria.html" >
                 <i class="fas fa-fw fa-table"></i>
                 <span>Auditoria</span></a>
         </li>
@@ -420,6 +420,8 @@
 
 <script src="./js/modal-register-user.js"></script>
 <script src="./js/modal-modify-user.js"></script>
+<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.js"></script>
+
 
 </body>
 
