Modulo de administracion 100% realizado

--- a/src/main/resources/static/auditoria.html
+++ b/src/main/resources/static/auditoria.html
@@ -13,7 +13,8 @@
 
     <!-- Custom fonts for this template -->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+          rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="css/sb-admin-2.min.css" rel="stylesheet">
@@ -21,7 +22,6 @@
 
     <!-- Custom styles for this page -->
     <link href="vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
-
 
 
 </head>
@@ -36,10 +36,8 @@
 
         <!-- Sidebar - Brand -->
         <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
-            <div class="sidebar-brand-icon rotate-n-15">
-                <i class="fas fa-laugh-wink"></i>
-            </div>
-            <div class="sidebar-brand-text mx-3">Users System<sup>2</sup></div>
+            <div><img src="./img/logo.png"></div>
+            <div class="sidebar-brand-text mx-3">Simor Comunity</div>
         </a>
 
 
@@ -103,18 +101,7 @@
                         <!-- Dropdown - User Information -->
                         <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
                              aria-labelledby="userDropdown">
-                            <a class="dropdown-item" href="#">
-                                <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
-                                Profile
-                            </a>
-                            <a class="dropdown-item" href="#">
-                                <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
-                                Settings
-                            </a>
-                            <a class="dropdown-item" href="#">
-                                <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
-                                Activity Log
-                            </a>
+
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
                                 <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
@@ -142,6 +129,8 @@
                     </div>
                     <div class="card-body">
                         <div class="table-responsive">
+                            Buscar:  <input id="searchTerm" type="text" onkeyup="doSearch()"/>
+
                             <table class="table table-bordered" id="usuarios" width="100%" cellspacing="0">
                                 <thead>
                                 <th>id</th>
@@ -153,15 +142,17 @@
 
                                 <tbody>
 
-
                                 </tbody>
+                                <tr class='noSearch hide'>
+
+                                    <td colspan="5"></td>
+
+                                </tr>
                             </table>
                         </div>
 
 
                     </div>
-
-
 
 
                 </div>
@@ -204,14 +195,15 @@
                     <span aria-hidden="true">×</span>
                 </button>
             </div>
-            <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
+            <div class="modal-body">Seleccione "Cerrar sesión" a continuación si está listo para finalizar su sesión actual.</div>
             <div class="modal-footer">
-                <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                <a class="btn btn-primary" href="login.html">Logout</a>
+                <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancelar</button>
+                <a onclick="registrarAuditoriaAcceso(localStorage.userName, 'salir')" class="btn btn-primary" href="login.html">Cerrar sesión</a>
             </div>
         </div>
     </div>
 </div>
+
 
 
 <!-- Bootstrap core JavaScript-->
@@ -224,17 +216,18 @@
 <!-- Custom scripts for all pages-->
 <script src="js/sb-admin-2.min.js"></script>
 
-<!-- Page level plugins -->
-<script src="vendor/datatables/jquery.dataTables.min.js"></script>
-<script src="vendor/datatables/dataTables.bootstrap4.min.js"></script>
+<!-- Page level plugins-->
+<!--<script src="vendor/datatables/jquery.dataTables.min.js"></script>-->
+<!--<script src="vendor/datatables/dataTables.bootstrap4.min.js"></script>-->
+
+
+
 
 <script src="js/auditoria.js"></script>
 <script src="js/modal-register-user.js"></script>
 
-
-
-
-
+<script src="js/buscar.js"></script>
+<!--<script src="js/tablas.js"></script>-->
 
 
 </body>
