--- a/src/main/resources/static/empleado.html
+++ b/src/main/resources/static/empleado.html
@@ -123,7 +123,7 @@
                 </div>
                 <div  id="preview"></div>
 
-                <script src="./js/index.js"></script>
+                <script src="./js/excel.js"></script>
 
 
 <!-- End of Main Content -->
